--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,14 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <link rel="shortcut icon" href="assets/images/fav.jpg">
+  <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+  <link rel="stylesheet" href="assets/css/fontawsom-all.min.css">
+  <link rel="stylesheet" href="assets/plugins/slider/css/owl.carousel.min.css">
+  <link rel="stylesheet" href="assets/plugins/slider/css/owl.theme.default.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+
 </head>
 <body>
   <app-root></app-root>
